# ChangeLog for media-sound/miniaudicle
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Oct 2007; Charlie Shepherd <masterdriverz@gentoo.org> Manifest:
  Update checksums for distfile.

  03 Apr 2007; Markus Ullmann <jokey@gentoo.org>
  -miniaudicle-0.1.3.6.ebuild, miniaudicle-0.1.3.7.ebuild:
  Drop old and ebuild fixes

  24 Mar 2007; Cedric Krier <cedk@gentoo.org> +miniaudicle-0.1.3.7.ebuild:
  Version bump

  19 Sep 2006; Cedric Krier <ced@ced.homedns.org>
  -miniaudicle-0.1.3.5.ebuild, -files/miniaudicle-0.1.3.5-makefile.patch,
  +miniaudicle-0.1.3.6.ebuild, +files/miniaudicle-0.1.3.6-makefile.patch:
  Version bump

  23 Aug 2006; Cedric Krier <ced@ced.homedns.org>
  miniaudicle-0.1.3.5.ebuild, files/miniaudicle-0.1.3.5-makefile.patch:
  fix multiple wx-config

  21 Aug 2006; Cedric Krier <ced@ced.homedns.org>
  -miniaudicle-0.1.3.3.ebuild, -files/miniaudicle-0.1.3.3-makefile.patch,
  -files/miniaudicle-0.1.3.3-unicode.patch, -miniaudicle-0.1.3.4.ebuild,
  -files/miniaudicle-0.1.3.4-makefile.patch, miniaudicle-0.1.3.5.ebuild:
  filter-flags march and clean

  15 Aug 2006; Cedric Krier <ced@ced.homedns.org>
  +miniaudicle-0.1.3.5.ebuild, +files/miniaudicle-0.1.3.5-makefile.patch:
  Version bump

  09 Aug 2006; Cedric Krier <ced@ced.homedns.org>
  +miniaudicle-0.1.3.4.ebuild, +files/miniaudicle-0.1.3.4-makefile.patch:
  Version bump

  30 Jul 2006; Cedric Krier <ced@ced.homedns.org>
  +miniaudicle-0.1.3.3.ebuild, +files/miniaudicle-0.1.3.3-makefile.patch,
  +files/miniaudicle-0.1.3.3-unicode.patch, +metadata.xml:
  New ebuild for bug 142175
