@@ -1,5 +1,5 @@
 AUX miniaudicle-0.1.3.6-makefile.patch 11774 RMD160 53efdc9b1e18dc7ec339cda36c1c2f3f4e22f733 SHA1 b9c224932a7d846d929bc3073a35216615ed6241 SHA256 20016693869bda4c14c3ff95654c32deb1d34686fba03d8075ff0e8ff3b019b3
 DIST miniAudicle-0.1.3.7.tgz 2148891 RMD160 95ec99173824204cf1e4aedc0160411efef77486 SHA1 7223cc33f65cb233d41a99905b6e1d051dbc6313 SHA256 d8f7aa6d40f5a7541ae2f6d21b3ff6696eb29c52456263b4f927ddd123c9e7c3
-EBUILD miniaudicle-0.1.3.7.ebuild 1983 RMD160 149c7de0704cc1d6acf51de9dea292e277954746 SHA1 453b5c8538b33bba7da7c27d209f5a389a4a44da SHA256 ebf34d77f27049cf610f011370cd6c59c8a43762c1e197b6c6acc5696c146983
-MISC ChangeLog 1611 RMD160 baabd590947c58c66dc829c6e0a1dcc554ff5b5c SHA1 9a2fc026220ff8ae8ca55d22cb708439e0545dfc SHA256 2804f6f6fababda5f7c85dad14ece926f6d24ffb6785aec5cea09763f37abfdd
+EBUILD miniaudicle-0.1.3.7.ebuild 1892 RMD160 184d01e166ef04fa3f366a433304ce69dd6e763f SHA1 550360c3ae652b7ba20e749aab666aef88258e00 SHA256 f1c4d2324543d19a0ebf02a650c56764ccaf219d27921e9292ffe23e296c8f75
+MISC ChangeLog 1814 RMD160 6d377c72b2d184ee627edb5eec1abcbd99560c55 SHA1 c678f233731a7a30fc45334217b74d121789c14c SHA256 28ac2fe2b4298bfe59da3c72b09f4bf79ac569a8b5c37fc141d7f0ca451bf11c
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
