@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/miniaudicle
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  13 Jan 2008; Jakub Moc <jakub@gentoo.org> miniaudicle-0.1.3.7.ebuild:
+  Fix wxGTK handling, drop alsa USE flag, alsa will be used as default if
+  neither jack nor oss USE flag is set. Ebuild cleanup.
 
   29 Oct 2007; Charlie Shepherd <masterdriverz@gentoo.org> Manifest:
   Update checksums for distfile.
